--- a/.github/workflows/veracode.yaml
+++ b/.github/workflows/veracode.yaml
@@ -61,5 +61,5 @@ jobs:
           createprofile: false
           # Specify path to upload
           filepath: "target/veracode"
-          vid: "${{ secrets.ORG_VERACODE_API_ID }}"
-          vkey: "${{ secrets.ORG_VERACODE_API_KEY }}"
+          vid: "${{ secrets.VERACODE_API_ID }}"
+          vkey: "${{ secrets.VERACODE_API_KEY }}"
