try fixing deployment and values chars

--- a/charts/vas/values.yaml
+++ b/charts/vas/values.yaml
@@ -5,6 +5,7 @@
 replicaCount: 1
 
 image:
+  name: "catenax-ng/product-vas-country-risk-frontend"
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "1.0.0"
