--- a/charts/vas/values.yaml
+++ b/charts/vas/values.yaml
@@ -5,6 +5,7 @@
 replicaCount: 1
 
 image:
+  registry: "ghcr.io"
   name: "catenax-ng/tx-vas-country-risk-backend"
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
