--- a/charts/vas/templates/deployment.yaml
+++ b/charts/vas/templates/deployment.yaml
@@ -47,11 +47,15 @@ spec:
                 secretKeyRef:
                   name: {{ include "includeWithPostgresContext" (list $ "postgresql.secretName") }}
                   key: password
+            {{- if .Values.pgadmin4.enabled -}}
             - name: APPLICATION_NAME
               valueFrom:
                 secretKeyRef:
                   name: product-vas-country-risk-backend-pgadmin4
                   key: password
+
+            {{- end }}
+            {{- if .Values.applicationSecret.enabled -}}
             - name: VAS_KEYCLOAKCLIENTID
               valueFrom:
                 secretKeyRef:
@@ -62,6 +66,7 @@ spec:
                 secretKeyRef:
                   name: product-vas-country-risk-backend-application
                   key: keycloakClientId
+            {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
