--- a/localCharts/vas/Chart.yaml
+++ b/localCharts/vas/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 2.0.0
+version: 2.0.6
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -23,6 +23,15 @@ version: 2.0.0
 # It is recommended to use it with quotes.
 appVersion: "1.0.0"
 
-
+dependencies:
+  - name: postgresql
+    version:  11.*.*
+    repository: https://charts.bitnami.com/bitnami
+    alias: postgres
+    condition: postgres.enabled
+  - condition: pgadmin4.enabled
+    name: pgadmin4
+    repository: https://helm.runix.net
+    version: 1.x.x
 
 
