--- a/localCharts/vas/templates/application-secret.yaml
+++ b/localCharts/vas/templates/application-secret.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ include "vas.applicationSecret.name" . }}
 type: Opaque
 stringData:
-  keycloak-secret: {{ .Values.applicationSecret.keycloak }}
-  cdq-key: {{ .Values.applicationSecret.cdq }}
+  keycloakClientSecret: {{ .Values.applicationSecret.clientSecret }}
+  keycloakClientId: {{ .Values.applicationSecret.clientId }}
 
 {{- end }}
