--- a/localCharts/vas/templates/deployment.yaml
+++ b/localCharts/vas/templates/deployment.yaml
@@ -32,11 +32,41 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: value-added-service:1.0.0
+          imagePullPolicy: Never
           envFrom:
             - configMapRef:
                 name: config-backend
+          env:
+            - name: VAS_DATASOURCE_HOST
+              value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") }}
+            - name: VAS_DATASOURCE_USER
+              value: {{ .Values.postgres.auth.username }}
+            - name: VAS_DATASOURCE_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "includeWithPostgresContext" (list $ "postgresql.secretName") }}
+                  key: password
+            {{- if .Values.pgadmin4.enabled -}}
+            - name: APPLICATION_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: product-vas-country-risk-backend-pgadmin4
+                  key: password
+
+            {{- end }}
+            {{- if .Values.applicationSecret.enabled -}}
+            - name: VAS_KEYCLOAKCLIENTID
+              valueFrom:
+                secretKeyRef:
+                  name: product-vas-country-risk-backend-application
+                  key: keycloakClientSecret
+            - name: VAS_KEYCLOAKCLIENTSECRET
+              valueFrom:
+                secretKeyRef:
+                  name: product-vas-country-risk-backend-application
+                  key: keycloakClientId
+            {{- end }}
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
