--- a/localCharts/vas/values.yaml
+++ b/localCharts/vas/values.yaml
@@ -5,14 +5,16 @@
 replicaCount: 1
 
 image:
-  registry: ghcr.io
-  repository: backend
-  pullPolicy: Never
+  registry: "ghcr.io"
+  name: "catenax-ng/tx-vas-country-risk-backend"
+  pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "main"
+
+certificate:
+  host: "localhost"
 
 appName: vas-country-risk-backend
-environment: dev
 
 
 imagePullSecrets: [ ]
@@ -47,7 +49,7 @@ autoscaling:
 
 ingress:
   className: nginx
-  enabled: true
+  enabled: false
 
 
 
@@ -99,18 +101,13 @@ readinessProbe:
 
 applicationSecret:
   enabled: false
-  keycloak: <path:vas/data/dev/keycloak#credentials-secret>
-  cdq: <path:vas/data/dev/cdq#api-key>
 
 configmap:
   # Specifies whether a configmap should be created
   create: true
   data:
-    spring_profiles_active: local
-    APPLICATION_HOST: 'http://backend-vas-service:8080/api/dashboard'
-    JAVA_OPTS: " -Xmx256m -Xms256m -Djavax.net.ssl.trustStore=/var/run/secrets/java.io/keystores/truststore.jks -Djavax.net.ssl.trustStorePassword=changeit"
-
-
+    spring_profiles_active: 'dev'
+    security_enabled: 'false'
 
 elastic:
   enabled: false
@@ -122,6 +119,26 @@ postgres:
   enabled: true
   auth:
     database: vas
-    postgresPassword: <path:vas/data/dev/postgresql#postgres-password>
     username: vas
-    password: <path:vas/data/dev/postgresql#password>
+    postgresPassword: vas
+    password: vas
+  ingress:
+    className: nginx
+    enabled: true
+  appName: vas-country-risk-postgres
+  environment: dev
+  service:
+    type: ClusterIP
+    port: 5432
+
+pgadmin4:
+  enabled: false
+  secret:
+    path: value-added-service/data/country-risk/dev/pgadmin4
+  env:
+    email: vas@catena-x.net
+  ingress:
+    enabled: true
+    annotations:
+      cert-manager.io/cluster-issuer: letsencrypt-prod
+      kubernetes.io/ingress.class: nginx
