--- a/charts/country-risk-backend-charts/values.yaml
+++ b/charts/country-risk-backend-charts/values.yaml
@@ -102,7 +102,9 @@ readinessProbe:
   port: 8080
 
 applicationSecret:
-  enabled: false
+  enabled: true
+  clientSecret: ''
+  clientId: ''
 
 configmap:
   # Specifies whether a configmap should be created
