--- a/charts/country-risk-backend-charts/values.yaml
+++ b/charts/country-risk-backend-charts/values.yaml
@@ -6,22 +6,27 @@ replicaCount: 1
 
 image:
   registry: "ghcr.io"
+  # -- Name of the docker image
   name: "catenax-ng/tx-vas-country-risk-backend"
   pullPolicy: Always
-  # Overrides the image tag whose default is the chart appVersion.
+  # -- Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
 certificate:
+  # -- Hostname for the certificate
   host: "localhost"
 
+# -- Name of the backend service
 appName: vas-country-risk-backend
 
-
+# -- List of secrets to be used
 imagePullSecrets: [ ]
-
+# -- Annotations to be added to the running pod
 podAnnotations: { }
 
+# -- Configuration for security-related options of the running pod
 podSecurityContext:
+  # -- Set the file system group ID for all containers in the pod
   fsGroup: 2000
 
 #Spring profiles under which the application should run
@@ -31,42 +36,53 @@ springProfiles:
 # Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
 # @url: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod
 securityContext:
+  # -- Specifies if processes running inside the container can gain more privileges than its initial user
   allowPrivilegeEscalation: false
+  # -- Specifies whether the process inside the container should run as a non-root user
   runAsNonRoot: true
+  # -- Specifies the user ID that the process inside the container should run
   runAsUser: 10001
+  # -- Specifies the group ID that the process inside the container should run
   runAsGroup: 3000
+  # -- Capabilities that the process inside the container should have
   capabilities:
     drop:
       - ALL
 
+# -- Service that should be created for the pod
 service:
+  # -- Type of service to be used
   type: ClusterIP
+  # -- Service port
   port: 8080
 
-
+# -- Specifies whether autoscaling should be enabled for the pod
 autoscaling:
   enabled: false
 
 ingress:
+  # -- Class name
   className: nginx
+  # -- Ingress enabled or not
   enabled: false
-
 
 
 # Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
 # @url: https://cloud.google.com/blog/products/containers-kubernetes/kubernetes-best-practices-resource-requests-and-limits
 resources:
+  # -- Maximum amount of resources that the deployment should be able to consume
   limits:
     cpu: 800m
     memory: 2Gi
+  # -- Minimum amount of resources that the deployment should be guaranteed to receive
   requests:
     cpu: 300m
     memory: 1Gi
 
-
-
+# -- Node placement constraints
 nodeSelector: { }
 
+# -- Pod toleration constraints
 tolerations: [ ]
 
 # Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
@@ -78,20 +94,30 @@ affinity:
         podAffinityTerm:
           labelSelector:
             matchExpressions:
+                # -- Match Pod rules
               - key: app.kubernetes.io/name
                 operator: DoesNotExist
+          # -- Key that is used to determine the topology of the cluster
           topologyKey: kubernetes.io/hostname
 
 # Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
 # @url: https://github.com/helm/charts/blob/master/stable/nginx-ingress/values.yaml#L210
+# -- Determines if a pod is still alive or not
 livenessProbe:
   failureThreshold: 3
+  # -- Number of seconds to wait before performing the first liveness probe
   initialDelaySeconds: 60
+  # -- Number of seconds to wait between consecutive probes
   periodSeconds: 10
+  # -- Number of consecutive successful probes before a pod is considered healthy
   successThreshold: 1
+  # -- Number of seconds after which a liveness probe times out
   timeoutSeconds: 1
+  # -- HTTP endpoint
   path: /management/health/liveness
+  # -- Port used
   port: 8080
+# -- Determine when a pod is ready to start accepting requests
 readinessProbe:
   failureThreshold: 3
   initialDelaySeconds: 60
@@ -101,27 +127,38 @@ readinessProbe:
   path: /management/health/readiness
   port: 8080
 
+# -- Defines the client secret and client ID
 applicationSecret:
+  # -- Value that specifies whether the application secret should be used
   enabled: true
+  # -- String value that represents the client secret
   clientSecret: '' #
+  # -- String value that represents the client ID
   clientId: ''  #
 
 configmap:
   # Specifies whether a configmap should be created
   create: true
   data:
+    # -- Which profile should be activated for the application
     spring_profiles_active: 'dev'
+    # -- Security configurations for the application
     security_enabled: 'false'
 
 
 elastic:
+  # -- Should elastic be enabled or not
   enabled: false
   security:
+    # -- Information about the transport layer security (TLS)
     tls:
+      # -- Encryption for the REST requests made to the Elastic cluster
       restEncryption: false
 
 postgres:
+  # -- Should postgres DB be enabled or not
   enabled: true
+  # -- Configuration values for the Database
   auth:
     database: vas
     username: vas
@@ -129,21 +166,32 @@ postgres:
     password: vas
   ingress:
     className: nginx
+    # -- Ingress enabled or not
     enabled: true
+  # -- Database application name
   appName: vas-country-risk-postgres
+  # -- Type of environment the database is running
   environment: dev
   service:
+    # -- Type of service to be used
     type: ClusterIP
+    # -- Port to be used on this service
     port: 5432
 
 pgadmin4:
+  # -- Should pgadmin4 be enabled or not
   enabled: false
   secret:
+    # -- Path where the information related to the secret
     path: value-added-service/data/country-risk/dev/pgadmin4
   env:
+    # -- Email used on the Env environment
     email: vas@catena-x.net
   ingress:
+    # -- Ingress enabled or not
     enabled: true
     annotations:
+      # -- Cluster issuer used for the ingress
       cert-manager.io/cluster-issuer: letsencrypt-prod
+      # -- Class for the pgadmin4 deployment
       kubernetes.io/ingress.class: nginx
