--- a/charts/country-risk-backend-charts/values.yaml
+++ b/charts/country-risk-backend-charts/values.yaml
@@ -66,6 +66,37 @@ ingress:
   # -- Ingress enabled or not
   enabled: false
 
+ingress:
+  enabled: false
+  className: nginx
+  annotations:
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    # kubernetes.io/ingress.class: nginx
+    # kubernetes.io/tls-acme: "true"
+  hosts:
+    - host: {{ .Values.certificate.host }}
+      http:
+        paths:
+          # specific path the app should be reachable on the host
+          # complete URL for the app consists of host AND path
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                # Name of the service, the ingress controller should route the traffic to, if the host/path combination is called
+                # Adjust that to your service name
+                name: {{ include "vas.fullname" . }}-service
+                port:
+                  # Port number, the kubernetes service is listening on
+                  # Adjust that to your services' port
+                  number: {{ .Values.service.port }}
+  tls:
+    - hosts:
+        - {{ .Values.certificate.host }}
+      # Default secret for certificate creation already provided to your namespace
+      secretName: tls-secret
+
 
 # Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
 # @url: https://cloud.google.com/blog/products/containers-kubernetes/kubernetes-best-practices-resource-requests-and-limits
@@ -162,8 +193,6 @@ postgres:
   auth:
     database: vas
     username: vas
-    postgresPassword: vas
-    password: vas
   ingress:
     className: nginx
     # -- Ingress enabled or not
