try empty string

--- a/charts/country-risk-backend-charts/templates/application-secret.yaml
+++ b/charts/country-risk-backend-charts/templates/application-secret.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ include "vas.applicationSecret.name" . }}
 type: Opaque
 stringData:
-  keycloakClientSecret: {{ default randAlphaNum 10 .Values.applicationSecret.clientSecret }}
-  keycloakClientId:  {{ default randAlphaNum 10 .Values.applicationSecret.clientId }}
+  keycloakClientSecret: {{ default {randAlphaNum 10} .Values.applicationSecret.clientSecret }}
+  keycloakClientId:  {{ default {randAlphaNum 10} .Values.applicationSecret.clientId }}
 
 {{- end }}
