--- a/charts/country-risk-backend-charts/templates/application-secret.yaml
+++ b/charts/country-risk-backend-charts/templates/application-secret.yaml
@@ -1,12 +1,10 @@
 {{- if .Values.applicationSecret.enabled -}}
-
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "vas.applicationSecret.name" . }}
 type: Opaque
 stringData:
-  keycloakClientSecret: {{ default {randAlphaNum 10} .Values.applicationSecret.clientSecret }}
-  keycloakClientId:  {{ default {randAlphaNum 10} .Values.applicationSecret.clientId }}
-
+  keycloakClientSecret: {{ default (randAlphaNum 15) .Values.applicationSecret.clientSecret }}
+  keycloakClientId:  {{ default (randAlphaNum 15) .Values.applicationSecret.clientId }}
 {{- end }}
