--- a/charts/country-risk-backend-charts/templates/deployment.yaml
+++ b/charts/country-risk-backend-charts/templates/deployment.yaml
@@ -1,3 +1,22 @@
+###############################################################
+# Copyright (c) 2022,2023 Contributors to the Eclipse Foundation
+#
+# See the NOTICE file(s) distributed with this work for additional
+# information regarding copyright ownership.
+#
+# This program and the accompanying materials are made available under the
+# terms of the Apache License, Version 2.0 which is available at
+# https://www.apache.org/licenses/LICENSE-2.0.
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations
+# under the License.
+#
+# SPDX-License-Identifier: Apache-2.0
+###############################################################
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -32,11 +51,31 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+          image: {{ .Values.image.registry }}/{{ .Values.image.name }}:{{ default .Chart.AppVersion .Values.image.tag }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           envFrom:
             - configMapRef:
                 name: config-backend
+          env:
+            - name: VAS_DATASOURCE_HOST
+              value: {{ include "includeWithPostgresContext" (list $ "postgresql.primary.fullname") }}
+            - name: VAS_DATASOURCE_USER
+              value: {{ .Values.postgres.auth.username }}
+            - name: VAS_DATASOURCE_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: {{ include "includeWithPostgresContext" (list $ "postgresql.secretName") }}
+                  key: password
+            - name: VAS_KEYCLOAKCLIENTID
+              valueFrom:
+                secretKeyRef:
+                  name: product-vas-country-risk-backend-application
+                  key: keycloakClientSecret
+            - name: VAS_KEYCLOAKCLIENTSECRET
+              valueFrom:
+                secretKeyRef:
+                  name: product-vas-country-risk-backend-application
+                  key: keycloakClientId
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
