--- a/charts/country-risk-backend-charts/templates/configmap.yaml
+++ b/charts/country-risk-backend-charts/templates/configmap.yaml
@@ -17,11 +17,11 @@
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
 
-{{- if .Values.configmap.create -}}
+{{ if .Values.configmap.create }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: config-backend
 data:
   {{- toYaml .Values.configmap.data | nindent 2 }}
-{{- end -}}
+{{ end }}
