--- a/charts/country-risk-backend-charts/templates/ingress.yaml
+++ b/charts/country-risk-backend-charts/templates/ingress.yaml
@@ -17,7 +17,8 @@
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
 
-{{- if .Values.ingress.enabled -}}
+{{ if .Values.ingress.enabled }}
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -53,4 +54,4 @@ spec:
       # Default secret for certificate creation already provided to your namespace
       secretName: tls-secret
 
-{{- end }}
+{{ end }}
