--- a/charts/country-risk-backend-charts/templates/application-secret.yaml
+++ b/charts/country-risk-backend-charts/templates/application-secret.yaml
@@ -17,7 +17,8 @@
 # SPDX-License-Identifier: Apache-2.0
 ###############################################################
 
-{{- if .Values.applicationSecret.enabled -}}
+{{ if .Values.applicationSecret.enabled }}
+
 apiVersion: v1
 kind: Secret
 metadata:
@@ -26,4 +27,5 @@ type: Opaque
 stringData:
   keycloakClientSecret: {{ default (randAlphaNum 15) .Values.applicationSecret.clientSecret }}
   keycloakClientId:  {{ default (randAlphaNum 15) .Values.applicationSecret.clientId }}
-{{- end }}
+
+{{ end }}
