--- a/charts/country-risk-backend-charts/values.yaml
+++ b/charts/country-risk-backend-charts/values.yaml
@@ -86,13 +86,12 @@ ingress:
   className: nginx
   # -- Ingress enabled or not
   enabled: false
-
-ingress:
-  enabled: false
-  className: nginx
   annotations:
+    # -- HTTP traffic should be redirected to HTTPS
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+    # -- Ingress controller should pass SSL traffic directly to the backend pods
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+
 
 
 # Following Catena-X Helm Best Practices @url: https://catenax-ng.github.io/docs/kubernetes-basics/helm
