--- a/charts/country-risk-backend-charts/templates/application-secret.yaml
+++ b/charts/country-risk-backend-charts/templates/application-secret.yaml
@@ -1,4 +1,5 @@
-###############################################################
+################################################################################
+# Copyright (c) 2022,2023 BMW Group AG 
 # Copyright (c) 2022,2023 Contributors to the Eclipse Foundation
 #
 # See the NOTICE file(s) distributed with this work for additional
@@ -15,7 +16,7 @@
 # under the License.
 #
 # SPDX-License-Identifier: Apache-2.0
-###############################################################
+################################################################################
 
 {{ if .Values.applicationSecret.enabled }}
 
