--- a/charts/country-risk-backend-charts/Chart.yaml
+++ b/charts/country-risk-backend-charts/Chart.yaml
@@ -45,14 +45,15 @@ version: 2.1.1
 appVersion: "1.0.4"
 
 dependencies:
-  - name: postgresql
-    version:  11.*.*
-    repository: https://charts.bitnami.com/bitnami
-    alias: postgres
-    condition: postgres.enabled
-  - condition: pgadmin4.enabled
-    name: pgadmin4
-    repository: https://helm.runix.net
-    version: 1.x.x
+- name: postgresql
+  version: 11.*.*
+  repository: https://charts.bitnami.com/bitnami
+  alias: postgres
+  condition: postgres.enabled
+- name: pgadmin4
+  version: 1.x.x
+  repository: https://helm.runix.net
+  alias: pgadmin4
+  condition: pgadmin4.enabled
 
 
