Modification in secret-pgadmin4.yaml file

--- a/charts/country-risk-backend-charts/templates/secret-pgadmin4.yaml
+++ b/charts/country-risk-backend-charts/templates/secret-pgadmin4.yaml
@@ -1,4 +1,4 @@
-{{- if eq true .Values.postgres.enabled }}
+{{- if eq true .Values.pgadmin4.enabled }}
 ################################################################################
 # Copyright (c) 2022,2023 BMW Group AG
 # Copyright (c) 2022,2023 Contributors to the Eclipse Foundation
