fix(Country Risk): Changed Eclipse Jar, Changed Trivy image path to latest

--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -71,7 +71,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           # Path to Docker image
-          image-ref: "ghcr.io/catenax-ng/product-value-added-service:main"
+          image-ref: "ghcr.io/catenax-ng/tx-vas-country-risk-backend:latest"
           format: "sarif"
           output: "trivy-results3.sarif"
           exit-code: "1"
