feat(Country Risk): Add project name to sonar cloud properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.coverage.jacoco.xmlReportPaths=target/site/**/jacoco*.xml
 sonar.java.codeCoveragePlugin=jacoco
 sonar.junit.reportPaths=target/surefire-reports,target/failsafe-reports
 sonar.coverage.exclusions=src/main/java/com/catenax/valueaddedservice/dto/**/*.*,src/main/java/com/catenax/valueaddedservice/domain/**/*.*
+sonar.projectName=tx-vas-country-risk-backend
