--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 	<groupId>org.eclipse.tractusx</groupId>
 	<artifactId>value-added-service</artifactId>
 	<version>1.1.1</version>
-	<name>value-added-service</name>
+	<name>tx-vas-country-risk-backend</name>
 	<description>Project to Validate Country Risks Score</description>
 	<properties>
 		<java.version>17</java.version>
@@ -49,6 +49,7 @@
 		<sonar.coverage.jacoco.xmlReportPaths>${project.reporting.outputDirectory}/target/jacoco-report/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.organization>catenax-ng</sonar.organization>
 		<sonar.projectKey>catenax-ng_tx-vas-country-risk-backend</sonar.projectKey>
+		<sonar.projectName>tx-vas-country-risk-backend</sonar.projectName>
 		<sonar1.coverage.exclusions>src/main/java/org/eclipse/tractusx/valueaddedservice/dto//.,src/main/java/org/eclipse/tractusx/valueaddedservice/domain//.¨</sonar1.coverage.exclusions>
 		<jacoco.version>0.8.7</jacoco.version>
 		<org.owasp.esapi>2.5.1.0</org.owasp.esapi>
