feat(Country Risk): Add roles to JWT token claims - Updated the JWT token generation method to include user roles in the token claims. - Roles are now available in the token payload and can be used for role-based access control on the frontend.

--- a/src/main/resources/config/application-local.yml
+++ b/src/main/resources/config/application-local.yml
@@ -58,3 +58,6 @@ application:
   host: http://localhost:8080/api/dashboard
   partnersPoolUrl:
     legalEntities: 'https://partners-pool.dev.demo.catena-x.net/api/catena/legal-entities'
+
+server:
+  port: 9090
